# friendly-cli

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  fcli.pc.in
.github/workflows/: cmake.yml
include/fcli/: indicator.hpp  palette.hpp  progress.hpp  terminal.hpp  text.hpp  theme.hpp
include/fcli/internal/: enum_array.hpp  enum_array.inl  lazy_init.hpp  lazy_init.inl
src/: progress.cpp  terminal.cpp  text.cpp  theme.cpp
test/: main.cpp  progress.cpp  terminal.cpp  text.cpp  theme.cpp
test/internal/: enum_array.cpp  lazy_init.cpp
